--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="#">
-            <img src="images/null.png"/>
-        </a>
-        <nav>
-            <a href="#first">Возможности</a>
-            <a href="#cost">Стоимость</a>
-            <a href="#third">Контакты</a>
-        </nav>
-        <select>
-            <option value="RU">RU</option>
-            <option value="ENG">ENG</option>
-        </select>
+        <div class="head-box">
+                <a href="#">
+                    <img src="images/edspace.png"/>
+                </a>
+                <nav>
+                    <a href="#first">Возможности</a>
+                    <a href="#cost">Стоимость</a>
+                    <a href="#third">Контакты</a>
+                </nav>
+                <select>
+                    <option value="RU">RU</option>
+                    <option value="ENG">ENG</option>
+                </select>
+        </div>
     </header>
     <section>
         <h1>Ed Space
@@ -106,8 +109,8 @@
         <p>Надежная защита, бесперебойная работа и высокая производительность системы позволит наслаждаться процессом обучния.</p>
         <img src="images/null.png"/>  
     </section>
-    <section>
-        <img src="images/null.png"/>
+    <section class="clickbtn">
+        <img src="images/edspace.png"/>
         <div>
             <label>Имя Фамилия</label>
             <input type="text"/>
@@ -134,7 +137,7 @@
     </section>
     <section id="third">
         <a href="#">
-            <img src="images/null.png"/> 
+            <img src="images/edspace.png"/> 
         </a>
         <a href="">
             <img src="images/null.png"/> 
