--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </select>
         </div>
     </header>
-    <section>
+    <section class="firstsect">
         <h1>Ed Space
             <div>Ваши знания и экспертность обретут здесь форму</div>
         </h1>
@@ -32,7 +32,7 @@
     </section>
     <input type="checkbox" id="btn">
     <label for="btn" class="button">Попробовать бесплатно</i></label>
-    <section>
+    <section class="secondsect">
         <h2>Точно подойдет для:</h2>
         <article>
             <img src="images/null.png"/>
@@ -44,10 +44,9 @@
             <h3>Создания корпоративного обучения</h3>
             <p>Поможем перенести корпоративную академию, базу данных, учебные курсы, настроим систему мотивации обучения, круглосуточная поддержка.</p>
         </article>
+        <label for="btn" class="button">Попробовать бесплатно</i></label>
     </section>
-    <input type="checkbox" id="btn">
-    <label for="btn" class="button">Попробовать бесплатно</i></label>
-    <section id="first">
+    <section id="first" class="thirdsect">
         <h2>Возможности Ed Space</h2>
         <p>Поможем перенести корпоративную академию, базу данных, учебные курсы, настроим систему мотивации обучения, круглосуточная поддержка.</p>
         <article>
@@ -80,10 +79,9 @@
             <h3>Записи хранятся на платформе</h3>
             <p>Спланируйте расписание курсов самым удобным образом. Больше никаких накладок и переносов.</p>
         </article>
+        <label for="btn" class="button">Попробовать бесплатно</i></label>
     </section>
-    <input type="checkbox" id="btn">
-    <label for="btn" class="button">Попробовать бесплатно</i></label>
-    <section id="second">
+    <section id="second" class="fourthsect">
         <h2>Выбирайте Ed Space
             <div>сегодня и вы получите</div>
         </h2>
@@ -99,13 +97,10 @@
         <h2>Запустите свою онлайн-школу</h2>
         <p>Или разверните корпоративный учебный портал уже сегодня.</p>
     </section>
-    <section id="cost">
+    <section id="cost" class="fifthsect">
         <h3>Цена 250 рублей за 1 ученика в месяц</h3>
-        <h6>Все готово для запуска. Попробуйте 7-дневный демо-доступ.</h6>
-    </section>
-    <input type="checkbox" id="btn">
-    <label for="btn" class="button">Попробовать бесплатно</i></label>
-    <section>
+        <h6>Все готово для запуска. Попробуйте 7-дневный демо-доступ.</h6>   
+        <label for="btn" class="button">Попробовать бесплатно</i></label>
         <h2>Точно подойдет для:</h2>
         <h3>Любых онлайн-школ</h3>
         <p>Быстрый запуск, лекгое управление, все инструменты в одной платформе.</p>
@@ -144,7 +139,7 @@
             <label for="btn" class="receive" >ОТПРАВИТЬ</label>
         </div>
     </section>
-    <section id="third">
+    <section id="third" class="sixthsect">
         <a href="#">
             <img src="images/edspace.png"/> 
         </a>
@@ -169,7 +164,7 @@
             <a href="">+7(002)0000000</a>
         </nav>
     </section>
-    <footer>
+    <footer class="lastsect">
         <p>2022 Ed Space. Все права защищены</p>
         <nav>
             <a href="">icon1</a>
